貔貅特和瑞皮特，调整技能和种植，修复bug